[gd_scene load_steps=12 format=3 uid="uid://c0ei7vy2mlvb2"]

[ext_resource type="Texture2D" uid="uid://ddon3r17tpqkh" path="res://assets/ui/HUD_CUSTOMER_ORDER.png" id="1_5r23v"]
[ext_resource type="Texture2D" uid="uid://rblpbt0soakn" path="res://assets/dishes/DISH_BURGER.png" id="2_dwx7k"]
[ext_resource type="Script" path="res://scenes/ui/order_container.gd" id="2_kyivv"]
[ext_resource type="Texture2D" uid="uid://c7cc0f52ldxmy" path="res://assets/dishes/DISH_SALAD.png" id="3_n2kgf"]
[ext_resource type="Texture2D" uid="uid://bid84j7t5q55e" path="res://assets/dishes/DISH_SANDWICH.png" id="4_pl2nj"]
[ext_resource type="Texture2D" uid="uid://vhsekv0wfikt" path="res://assets/dishes/DISH_STEAK.png" id="5_pxvi5"]
[ext_resource type="Texture2D" uid="uid://coi4t22qja0gh" path="res://assets/ice-cream/SCOOP_BLUE.png" id="6_4d2wg"]
[ext_resource type="Texture2D" uid="uid://d3n3wh0xk6xyu" path="res://assets/ice-cream/SCOOP_BROWN.png" id="7_m5v2u"]
[ext_resource type="Texture2D" uid="uid://bx5s0diiykact" path="res://assets/ice-cream/SCOOP_GREEN.png" id="8_tck6f"]
[ext_resource type="Texture2D" uid="uid://bckahn4wba2sd" path="res://assets/ice-cream/SCOOP_PINK.png" id="9_5ogg1"]
[ext_resource type="Texture2D" uid="uid://bii4dbgp115sw" path="res://assets/ice-cream/SCOOP_WHITE.png" id="10_2vpkm"]

[node name="OrderContainer" type="Sprite2D"]
scale = Vector2(0.180671, 0.180671)
texture = ExtResource("1_5r23v")
script = ExtResource("2_kyivv")

[node name="Burger" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16.6054, 149.443)
scale = Vector2(0.126112, 0.126112)
texture = ExtResource("2_dwx7k")

[node name="Salad" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5.53547, 166.047)
scale = Vector2(0.117175, 0.117175)
texture = ExtResource("3_n2kgf")

[node name="Sandwich" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5.53546, 149.443)
scale = Vector2(0.101186, 0.101186)
texture = ExtResource("4_pl2nj")

[node name="Steak" type="Sprite2D" parent="."]
visible = false
position = Vector2(11.0691, 182.652)
rotation = 0.261799
scale = Vector2(0.106528, 0.106528)
texture = ExtResource("5_pxvi5")

[node name="ScoopLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(-282.281, -276.746)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("6_4d2wg")

[node name="SpriteMiddle" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.000882149, -276.746)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("6_4d2wg")

[node name="ScoopRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(293.35, -276.746)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("6_4d2wg")

[node name="Blue" type="Sprite2D" parent="."]
visible = false
position = Vector2(-658.655, -963.075)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("6_4d2wg")

[node name="Brown" type="Sprite2D" parent="."]
visible = false
position = Vector2(-348.7, -957.54)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("7_m5v2u")

[node name="Green" type="Sprite2D" parent="."]
visible = false
position = Vector2(-38.7453, -963.075)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("8_tck6f")

[node name="Pink" type="Sprite2D" parent="."]
visible = false
position = Vector2(282.28, -957.54)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("9_5ogg1")

[node name="White" type="Sprite2D" parent="."]
visible = false
position = Vector2(619.909, -957.54)
scale = Vector2(0.0617313, 0.0617313)
texture = ExtResource("10_2vpkm")
